--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "Alban Petit"
-  avatar           : "/assets/images/profile.jpeg"
+  avatar           : "/assets/images/profile.jpg"
   bio              : "PhD student in NLP at LISN, University of Paris-Saclay, France"
   location         : "Orsay, France"
   email            :
