--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,9 @@ main:
   - title: "Home page"
     url: https://alban-petit.github.io/
   - title: "Publications"
-    url: /publications/
+    url: https://alban-petit.github.io/#publications
+  - title: "Experiences"
+    url: https://alban-petit.github.io/#experiences
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
