--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Alban Petit"
   avatar           : "/assets/images/profile.jpg"
-  bio              : "PhD student in NLP at LISN, University of Paris-Saclay, France"
+  bio              : "PhD student at LISN, Université Paris-Saclay, France"
   location         : "Orsay, France"
   email            :
   links:
